# pyopenair

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGES.rst  README.md  README.rst  pyproject.toml  requirements.txt  setup.py  wktmulti.txt
.github/workflows/: check_and_tests.yml  ci.yml  publish.yml
docs/: changelog.rst  conf.py  functions.rst  index.rst  installation.rst  openair.rst  requirements.txt
pyopenair/: __init__.py  __main__.py  factory.py  helper.py  main.py
pyopenair/templates/: single_element.txt
pyopenair/tests/: test_factory.py  test_helper.py
test/: dbdata.sql
tests/: crash.py  data.py  sample_data.py  test_factory.py  test_helper.py
