[tool.poetry]
name = "pyopenair"
version = "1.2.0"
authors = ["lpofredc <frederic.cloitre@lpo.fr>"]
description = "A simple python package to convert geo data to OpenAir format"
license = "AGPL-3.0-or-later"

readme = "README.rst"

homepage = "https://github.com/lpoaura/pyopenair"
repository = "https://github.com/lpoaura/pyopenair"
documentation = "https://pyopenair.readthedocs.io"

keywords = ["openair", "paragliding", "wkt2openair", "geo2openair", "airspace"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/lpoaura/pyopenair/issues"

[tool.poetry.scripts]
pyopenair = "pyopenair.main:cli"

[tool.poetry.dependencies]
python = ">=3.7.2,<4.0.0"
Shapely = "^2.0.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
mypy = "^0.991"
black = "^22.12.0"
pylint = "^2.15.10"
isort = "^5.7.0"
pre-commit = "^2.10.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx-rtd-theme = "^1.1.1"
sphinx = "^4.3.2"
pygments = "^2.14.0"


[tool.isort]
profile = "black"
line_length = 99
multi_line_output = 3
include_trailing_comma = true


[tool.black]
line-length = 79
target-version = ['py37']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "too-many-arguments",
  "too-many-locals",
  "protected-access"
]
good-names = [
    "an",
    "ac",
    "i"
]


[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
